--- a/styles/style.css
+++ b/styles/style.css
@@ -4,12 +4,18 @@
 /* common styles or utilities */
 body {
     font-family: 'Poppins', sans-serif;
+    /* max-width: 1200px;
+    margin: 0 auto; */
+}
+
+main {
+    /* width: 1150px; */
     max-width: 1200px;
     margin: 0 auto;
 }
 
 /* navigation styles */
-.nav-container {
+nav.nav-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -17,6 +23,7 @@ body {
 }
 
 .logo-title {
+    width: 1400px;
     font-weight: 700;
     font-size: 24px;
 }
@@ -50,6 +57,20 @@ body {
     margin-right: 133px;
 }
 
+.banner-title {
+    font-weight: 700;
+    font-size: 52px;
+    margin: 0;
+}
+
+.banner-description {
+    font-weight: 600;
+    font-size: 16px;
+    color: #3A3A3A;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+
 .btn-primary {
     color: #FFFFFF;
     background-color: #E02C6D;
@@ -58,4 +79,144 @@ body {
     font-size: 16px;
     border: 0;
     border-radius: 41px;
+}
+
+/* website styles */
+.websites {
+    display: flex;
+    width: 980px;
+    margin: 0 auto;
+    padding: 40px;
+    border-top: 1px solid rgb(226, 232, 232);
+    border-bottom: 1px solid rgb(226, 232, 232);
+}
+
+.website img {
+    width: 90px;
+    height: 60px;
+    margin-right: 60px;
+}
+
+/*--------------------------------------------------------------
+  collection styles 
+  --------------------------------------------------------------*/
+.popular-collection {
+    width: 980px;
+    height: 1700px;
+    margin: 100px auto;
+}
+
+.collection-title {
+    font-weight: 600;
+    font-size: 28px;
+    color: #3A3A3A;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.collections {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.collection {
+    width: 300px;
+    height: 476px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    padding: 17px 14px;
+}
+
+.collection-detail .title {
+    font-size: 28px;
+    font-weight: 500;
+    margin-top: 16px;
+    margin-bottom: 6px;
+    color: #18191F;
+}
+
+.collection-detail .collection-amnt {
+    font-size: 24px;
+    margin: 0;
+}
+
+.collection-detail .ratings .fa-solid {
+    font-size: 11px;
+    color: #FB8200;
+    ;
+}
+
+.collection-detail .ratings .point {
+    font-weight: 700;
+    font-size: 14px;
+    color: #5E6366;
+    margin-left: 8px;
+}
+
+.collection-detail .collection-descript {
+    width: 195px;
+    color: #787885;
+    font-weight: 700;
+    font-size: 14px;
+}
+
+/*---------------------------------------------------------------
+    feature styles 
+-----------------------------------------------------------------*/
+.feature {
+    width: 980px;
+    margin: 100px auto;
+    display: flex;
+}
+
+.feature-details {
+    margin-left: 96px;
+}
+
+.feature-details .feature-title {
+    color: #0A0826;
+    width: 610px;
+    margin-bottom: 0;
+    font-weight: 700;
+    font-size: 38px;
+}
+
+.feature-description {
+    width: 500px;
+    font-weight: 700;
+    font-size: 16px;
+    color: #6C6C6C;
+}
+
+.btn {
+    border-radius: 0;
+}
+
+/*------------------------------------------------------------------------
+     footer styles 
+--------------------------------------------------------------------------*/
+.footer {
+    background-color: #0A0826;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 50px;
+}
+
+.footer-title {
+    font-weight: 700;
+    font-size: 24px;
+    margin-bottom: 0;
+}
+.copy{
+    color: #D9DBE1;
+    margin: 0;
+}
+.icons{
+    margin-top: 17px;
+}
+.fa-brands{
+    margin-right: 16px;
+    font-size: 14px;
 }
